src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 222.2 84% 4.9%;

    --card: 0 0% 100%;
    --card-foreground: 222.2 84% 4.9%;

    --popover: 0 0% 100%;
    --popover-foreground: 222.2 84% 4.9%;

    --primary: 222.2 47.4% 11.2%;
    --primary-foreground: 210 40% 98%;

    --secondary: 210 40% 96.1%;
    --secondary-foreground: 222.2 47.4% 11.2%;

    --muted: 210 40% 96.1%;
    --muted-foreground: 215.4 16.3% 46.9%;

    --accent: 210 40% 96.1%;
    --accent-foreground: 222.2 47.4% 11.2%;

    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 210 40% 98%;

    --border: 214.3 31.8% 91.4%;
    --input: 214.3 31.8% 91.4%;
    --ring: 222.2 84% 4.9%;

    --radius: 0.5rem;

    --sidebar-background: 0 0% 98%;
    --sidebar-foreground: 240 5.3% 26.1%;
    --sidebar-primary: 240 5.9% 10%;
    --sidebar-primary-foreground: 0 0% 98%;
    --sidebar-accent: 240 4.8% 95.9%;
    --sidebar-accent-foreground: 240 5.9% 10%;
    --sidebar-border: 220 13% 91%;
    --sidebar-ring: 217.2 91.2% 59.8%;
  }

  .dark {
    --background: 208 35% 9%;
    --foreground: 0 0% 100%;

    --card: 208 35% 9%;
    --card-foreground: 0 0% 100%;

    --popover: 208 35% 9%;
    --popover-foreground: 0 0% 100%;

    --primary: 316 67% 41%;
    --primary-foreground: 0 0% 100%;

    --secondary: 208 35% 15%;
    --secondary-foreground: 0 0% 100%;

    --muted: 208 35% 15%;
    --muted-foreground: 0 0% 80%;

    --accent: 316 67% 41%;
    --accent-foreground: 0 0% 100%;

    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 0 0% 100%;

    --border: 208 35% 15%;
    --input: 208 35% 15%;
    --ring: 316 67% 41%;

    --sidebar-background: 208 35% 9%;
    --sidebar-foreground: 0 0% 100%;
    --sidebar-primary: 316 67% 41%;
    --sidebar-primary-foreground: 0 0% 100%;
    --sidebar-accent: 208 35% 15%;
    --sidebar-accent-foreground: 0 0% 100%;
    --sidebar-border: 208 35% 15%;
    --sidebar-ring: 316 67% 41%;
  }
}

@layer base {
  * {
    @apply border-border;
  }

  body {
    @apply bg-background text-foreground;
  }
}

